# ccxt_backtesting_exchange

./: .flake8  .pre-commit-config.yaml  PUBLISH.md  README.md  pyproject.toml
.github/workflow/: test-coverage.yaml
.github/workflows/: test-coverage.yaml
ccxt_backtesting_exchange/: __init__.py  backtester.py  clock.py  data_feed.py
data/: test-btc-data.json  test-eth-data.json  test-sol-data.json
docs/: api.md
tests/: conftest.py  test_backtester_balance.py  test_backtester_create_order.py  test_backtester_helpers.py  test_backtester_market.py  test_backtester_orders.py  test_clock.py  test_data_feed.py  test_get_df_value_by_column.py  test_market_data.py  test_set_df_value_by_column.py  test_update_df_value_by_column.py  test_utils_timeframe_parser.py  utils.py
