[project]
name = "ccxt_backtesting_exchange"
version = "0.1.0"
description = "a backtesting simulator based on ccxt"
authors = [
    {name = "Abdulhakeem",email = "abdulhakeemmustapha@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt (>=4.4.51,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "tdqm (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^25.1.0"
pre-commit = "^4.1.0"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py39']

